--- a/aidos-user-center/pom.xml
+++ b/aidos-user-center/pom.xml
@@ -21,6 +21,11 @@
             <groupId>club.godnest.aidos</groupId>
             <artifactId>aidos-common-support</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>club.godnest.aidos</groupId>
+            <artifactId>aidos-log</artifactId>
+        </dependency>
         <!-- internal end-->
 
         <dependency>
@@ -65,4 +70,24 @@
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <finalName>${project.artifactId}</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
