--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>2.2.6.RELEASE</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
 
+    <modelVersion>4.0.0</modelVersion>
     <groupId>club.godnest.aidos</groupId>
     <artifactId>aidos-all</artifactId>
     <version>1.0.0</version>
@@ -11,6 +17,7 @@
     <name>Aidos</name>
     <url>https://godnest.club/</url>
     <description>One Greece Gold</description>
+
 
     <developers>
         <developer>
@@ -25,6 +32,8 @@
         <module>aidos-rbac</module>
         <module>aidos-common-support</module>
         <module>aidos-gateway-center</module>
+        <module>aidos-cms</module>
+        <module>aidos-log</module>
     </modules>
 
     <properties>
@@ -55,6 +64,12 @@
                 <version>${aidos.component.verson}</version>
             </dependency>
 
+            <dependency>
+                <groupId>club.godnest.aidos</groupId>
+                <artifactId>aidos-log</artifactId>
+                <version>${aidos.component.verson}</version>
+            </dependency>
+
             <!--Spring Cloud 相关依赖-->
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
@@ -65,13 +80,13 @@
             </dependency>
 
             <!-- Spring Boot 相关依赖 -->
-            <dependency>
+           <!-- <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
                 <version>${spring-boot.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
+            </dependency>-->
 
             <!-- redisson -->
             <dependency>
