基于OpenFeign进行服务调用: 1. 认证信息通过interceptor设置 2. 通过System.properties进行线程间的数据通信

--- a/aidos-gateway-center/src/main/resources/application-dev.yaml
+++ b/aidos-gateway-center/src/main/resources/application-dev.yaml
@@ -8,14 +8,18 @@ spring:
         - id: uc
           uri: lb://user-center
           predicates:
-            - Path=/uc/**
+            - Path=/api/pub/user/**,/api/mgt/user/**
           filters:
-            - StripPrefix=1
             - name: CircuitBreaker
         - id: cms
           uri: lb://cms-center
           predicates:
-            - Path=/cms/**
+            - Path=/api/pub/cms/**,/api/mgt/cms/**
           filters:
-            - StripPrefix=1
+            - name: CircuitBreaker
+        - id: stats
+          uri: lb://stats-center
+          predicates:
+            - Path=/api/pub/stats/**,/api/mgt/stats/**
+          filters:
             - name: CircuitBreaker
